# SPECTRE

./: README.md  pyproject.toml
examples/: starlink_scan.py  synthetic_demo.py
src/orbital_sentinel/: __init__.py  cli.py  constellations.py  detector.py  spacetrack.py  tle_parser.py  viz.py
src/spectre/: __init__.py  cli.py  constellations.py  detector.py  spacetrack.py  tle_parser.py  viz.py
tests/: test_orbital_sentinel.py  test_spectre.py
