[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbital-sentinel"
version = "0.1.0"
description = "Detect satellite maneuvers from TLE history — OSINT tool for constellation operations analysis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["satellite", "TLE", "maneuver-detection", "OSINT", "space", "astrodynamics"]
classifiers = [
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Security",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "requests>=2.31",
    "matplotlib>=3.7",
    "click>=8.1",
    "rich>=13.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "jupyter",
    "plotly>=5.15",
    "seaborn>=0.12",
]

[project.scripts]
orbital-sentinel = "orbital_sentinel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
